--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - TradePro</title>
+    <title>About Us - EdgeFx</title>
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-content">
-            <a href="index.html" class="logo">TradePro</a>
+            <a href="index.html" class="logo">EdgeFx</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -26,7 +26,7 @@
     <!-- About Hero Section -->
     <section class="about-hero">
         <div class="container">
-            <h1>About TradePro</h1>
+            <h1>About EdgeFx</h1>
             <p class="subtitle">Empowering Traders Worldwide</p>
         </div>
     </section>
@@ -37,10 +37,10 @@
             <div class="about-grid">
                 <div class="about-text">
                     <h2>Our Mission</h2>
-                    <p>At TradePro, we're dedicated to revolutionizing the trading experience through cutting-edge technology and comprehensive market insights. Our platform empowers traders of all levels to make informed decisions and achieve their financial goals.</p>
+                    <p>At EdgeFx, we're dedicated to revolutionizing the trading experience through cutting-edge technology and comprehensive market insights. Our platform empowers traders of all levels to make informed decisions and achieve their financial goals.</p>
                     
                     <h2>Who We Are</h2>
-                    <p>Founded by a team of experienced traders and technology experts, TradePro combines decades of market expertise with innovative trading solutions. We understand the challenges modern traders face and have built our platform to address these needs directly.</p>
+                    <p>Founded by a team of experienced traders and technology experts, EdgeFx combines decades of market expertise with innovative trading solutions. We understand the challenges modern traders face and have built our platform to address these needs directly.</p>
 
                     <div class="stats-grid">
                         <div class="stat-item">
@@ -63,7 +63,7 @@
             </div>
 
             <div class="features-section">
-                <h2>Why Choose TradePro</h2>
+                <h2>Why Choose EdgeFx</h2>
                 <div class="features-grid">
                     <div class="feature-card">
                         <i class="fas fa-shield-alt"></i>
@@ -114,7 +114,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About Us</h3>
-                    <p>TradePro provides advanced trading solutions for modern investors. We offer comprehensive tools and support for successful trading.</p>
+                    <p>EdgeFx provides advanced trading solutions for modern investors. We offer comprehensive tools and support for successful trading.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
@@ -146,12 +146,12 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact Info</h3>
-                    <p>Email: info@tradepro.com</p>
+                    <p>Email: info@edgefx.com</p>
                     <p>Phone: +1 (555) 123-4567</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 TradePro. All rights reserved.</p>
+                <p>&copy; 2023 EdgeFx. All rights reserved.</p>
             </div>
         </div>
     </footer>
