--- a/benefits-forex.html
+++ b/benefits-forex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benefits of Forex Trading - TradePro</title>
+    <title>Benefits of Forex Trading - EdgeFx</title>
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-content">
-            <a href="index.html" class="logo">TradePro</a>
+            <a href="index.html" class="logo">EdgeFx</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -106,7 +106,7 @@
 
                 <div class="cta-section">
                     <h2>Start Your Forex Trading Journey</h2>
-                    <p>Take advantage of these benefits by opening a trading account with TradePro today.</p>
+                    <p>Take advantage of these benefits by opening a trading account with EdgeFx today.</p>
                     <a href="contact.html" class="btn">Get Started</a>
                 </div>
             </div>
@@ -119,7 +119,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About Us</h3>
-                    <p>TradePro provides advanced trading solutions for modern investors. We offer comprehensive tools and support for successful trading.</p>
+                    <p>EdgeFx provides advanced trading solutions for modern investors. We offer comprehensive tools and support for successful trading.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
@@ -151,7 +151,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 TradePro. All rights reserved.</p>
+                <p>&copy; 2023 EdgeFx. All rights reserved.</p>
             </div>
         </div>
     </footer>
