--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TradePro - Advanced Trading Solutions</title>
+    <title>EdgeFx - Advanced Trading Solutions</title>
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -15,7 +15,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-content">
-            <a href="#" class="logo">TradePro</a>
+            <a href="#" class="logo">EdgeFx</a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -105,7 +105,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About Us</h3>
-                    <p>TradePro provides advanced trading solutions for modern investors. We offer comprehensive tools and support for successful trading.</p>
+                    <p>EdgeFx provides advanced trading solutions for modern investors. We offer comprehensive tools and support for successful trading.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
@@ -137,12 +137,12 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact Info</h3>
-                    <p>Email: info@tradepro.com</p>
+                    <p>Email: info@edgefx.com</p>
                     <p>Phone: +1 (555) 123-4567</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 TradePro. All rights reserved.</p>
+                <p>&copy; 2023 EdgeFx. All rights reserved.</p>
             </div>
         </div>
     </footer>
